name:                grep-tree
version:             0.0.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.14

executable grep-tree
  main-is:           Main.hs 
  hs-source-dirs:    src
  build-depends:     base == 4.5.*
                   , text == 0.11.3.1
                   , bytestring == 0.9.2.1
                   , peggy == 0.3.2
                   , lens == 3.7.1.2
                   , aeson == 0.6.1.0
                   , process == 1.1.0.2
                   , MonadRandom == 0.1.3
                   , cmdargs == 0.9.3
  ghc-options:       -Wall
  default-language:  Haskell2010
